Fixed: use Link and increase height of card so text doesn't overflow

--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -77,7 +77,7 @@ h1 {
 #hero .card{
    text-align: center;
    width: 25rem;
-   height: 25rem;
+   height: 28rem;
 } 
 
 #quality-reports .card{
